adds slashes to mondoo command
Signed-off-by: Scott Ford <scott@scottford.io>

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -29,14 +29,14 @@ jobs:
         name: Install Mondoo Client
         run: |
           curl -sSL https://mondoo.com/download.sh | bash
-          mondoo version
+          ./mondoo version
       
       -
         name: Configure Mondoo
         run: |
           echo ${{ secrets.MONDOO_SERVICE_ACCOUNT }} | base64 -d > mondoo.json
           cat mondoo.json
-          mondoo status --config mondoo.json
+          ./mondoo status --config mondoo.json
 
       -
         name: Build and push
