--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -33,12 +33,18 @@ jobs:
 
       - 
         name: Docker Build
-        run: docker build .
+        run: |
+          docker build . -t ghcr.io/${{ github.repository_owner }}/secure-python-app
+          docker images
+
+      - name: Mondoo scan 
+        run: ./mondoo scan docker ghcr.io/${{ github.repository_owner }}/secure-python-app
+
 
       -
         name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
+        run: echo $GHCR_TOKEN | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+
+      - 
+        name: Push image
+        run: docker push ghcr.io/${{ github.repository_owner }}/secure-python-app
