--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -38,7 +38,7 @@ jobs:
           docker images
 
       - name: Mondoo scan 
-        run: ./mondoo scan docker ghcr.io/${{ github.repository_owner }}/secure-python-app
+        run: ./mondoo scan docker ghcr.io/${{ github.repository_owner }}/secure-python-app --config mondoo.json
 
 
       -
